# lerobot-policy-snvla

./: .gitignore  README.md  pyproject.toml
.superpowers/sdd/: task-8-picked-fix-report.md
docs/superpowers/plans/: 2026-07-11-p5-sim-foundation-phase1.md  2026-07-12-p5-e2-train-eval.md  2026-07-13-p5-e2-corrective-training.md  2026-07-13-p5-e2-handoff.md  2026-07-14-p5-e2-success-only-state-dropout.md
docs/superpowers/reports/: 2026-07-11-p5-e1-report.md  2026-07-12-p5-e2-report.md  2026-07-14-p5-e2-success-only-report.md
docs/superpowers/specs/: 2026-07-11-snvla-improvements-design.md  2026-07-13-p5-e2-corrective-training-design.md  2026-07-14-p5-e2-success-only-state-dropout-design.md  2026-07-16-general-hallucination-mitigation-review-prompt.md
src/lerobot_policy_snvla/: __init__.py  configuration_molmoact2_snvla.py  configuration_snvla.py  constants.py  modeling_molmoact2_snvla.py  modeling_snvla.py  molmoact2_gradient_checkpointing.py  processor_molmoact2_snvla.py  processor_snvla.py  runtime.py  training_runtime.py  training_schedule.py
src/lerobot_policy_snvla/scripts/: audit_legacy_placed_events.py  augment_narrations.py  benchmark_molmoact2.py  benchmark_molmoact2_trial.py  combine_narration_transitions.py  debug_inference.py  prepare_corrective_dataset.py  prepare_success_dataset.py  rewrite_dataset_text.py  snvla_record.py  stroboscopic_image.py  train_bf16_fsdp.py  trim_success_dataset.py  verify_molmoact2_preprocessing_device_parity.py  visualize.py  visualize_narration_flow.py  visualize_snvla_eval.py
src/lerobot_policy_snvla/sim/: collect.py  collect_corrective.py  completion.py  eval_metrics.py  evaluate.py  events.py  scripted_expert.py  t1_count_blocks.py
src/lerobot_snvla/: __init__.py  cli.py  compat.py  constants.py  integration.py
src/lerobot_snvla/policies/: __init__.py
src/lerobot_snvla/policies/snvla/: __init__.py  configuration_snvla.py  modeling_snvla.py  processor_snvla.py
src/lerobot_snvla/scripts/: analyze_dataset_stats.py  data_aug_pipeline.sh  generate_paper_figure.py  snvla_record.py  visualize.py  visualize_narration_flow.py
tests/: test_molmoact2_gradient_checkpointing.py  test_runtime.py  test_training_runtime.py
tests/policies/: test_molmoact2_compile_cuda.py  test_molmoact2_image_feature_sharing.py  test_molmoact2_snvla.py  test_snvla.py
tests/scripts/: test_augment_narrations.py  test_benchmark_molmoact2.py  test_combine_narration_transitions.py  test_debug_inference.py  test_prepare_corrective_dataset.py  test_prepare_success_dataset.py  test_signal_checkpoint_controller.py  test_snvla_record.py  test_train_bf16_fsdp.py  test_trim_success_dataset.py  test_verify_molmoact2_preprocessing_device_parity.py  test_visualize.py  test_visualize_snvla_eval.py
tests/sim/: conftest.py  test_collect.py  test_collect_corrective.py  test_completion.py  test_env_smoke.py  test_eval_metrics.py  test_evaluate.py  test_events.py  test_scripted_expert.py  test_t1_env.py
tmp/: diff.txt  visualize_snvla_eval.py
