[build-system]
requires = ["setuptools>=71.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_snvla"
version = "0.1.0"
description = "SN-VLA policy plugin for Hugging Face LeRobot"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "lerobot[dataset,pi]>=0.6.0,<0.7.0",
    "transformers>=5.4.0,<5.6.0",
    "numpy>=1.26.0",
    "torch>=2.8.0",
]

[project.optional-dependencies]
analysis = [
    "datasets>=3.0.0",
    "matplotlib>=3.10.0",
    "opencv-python>=4.10.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "pyarrow>=16.0.0",
    "seaborn>=0.13.0",
    "bokeh>=3.0.0",
    "tqdm>=4.66.0",
]
dev = [
    "pytest>=8.1.0,<9.0.0",
    "ruff>=0.6.0",
]
sim = [
    "lerobot[libero]>=0.6.0,<0.7.0",
]

[project.scripts]
snvla-record = "lerobot_policy_snvla.scripts.snvla_record:main"
snvla-sim-collect = "lerobot_policy_snvla.sim.collect:main"
snvla-sim-collect-corrective = "lerobot_policy_snvla.sim.collect_corrective:main"
snvla-sim-eval = "lerobot_policy_snvla.sim.evaluate:main"
snvla-analyze-dataset-stats = "lerobot_policy_snvla.scripts.analyze_dataset_stats:main"
snvla-augment-narrations = "lerobot_policy_snvla.scripts.augment_narrations:main"
snvla-debug-inference = "lerobot_policy_snvla.scripts.debug_inference:main"
snvla-generate-paper-figure = "lerobot_policy_snvla.scripts.generate_paper_figure:main"
snvla-generate-partial-scoop-episodes = "lerobot_policy_snvla.scripts.generate_partial_scoop_episodes:main"
snvla-rewrite-dataset-text = "lerobot_policy_snvla.scripts.rewrite_dataset_text:main"
snvla-stroboscopic-image = "lerobot_policy_snvla.scripts.stroboscopic_image:main"
snvla-train-bf16-fsdp = "lerobot_policy_snvla.scripts.train_bf16_fsdp:main"
snvla-visualize = "lerobot_policy_snvla.scripts.visualize:main"
snvla-visualize-narration-flow = "lerobot_policy_snvla.scripts.visualize_narration_flow:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lerobot_policy_snvla = ["scripts/*.sh"]

[tool.pytest.ini_options]
markers = [
    "sim: requires LIBERO simulator (deselect with '-m \"not sim\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "T20", "N", "UP", "SIM"]
ignore = ["E501", "T201", "T203", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"src/lerobot_policy_snvla/scripts/*.py" = ["ALL"]
